--- a/Views/Item/GetEmployees.cshtml
+++ b/Views/Item/GetEmployees.cshtml
@@ -30,8 +30,8 @@
                         <td>@employee.Name</td>
                         <td>@employee.Gender</td>
                         <td>
-                            <a href="javascript:void(0);" onclick="employee.get(@employee.Id)" class="dropdown-item">Edit</a>
-                            <a class="dropdown-item" href="javascript:void(0);" onclick="employee.delete(@employee.Id)"> Delete</a>
+                            <a href="javascript:void(0);" onclick="employee.get(@employee.Id)" class="dropdown-item"><i class="fas fa-quidditch fa-xs"></i></a>
+                            <a class="dropdown-item" href="javascript:void(0);" onclick="employee.delete(@employee.Id)"><i class="fa fa-trash"></i> </a>
                         </td>
                     </tr>
                 }
@@ -183,3 +183,5 @@
 <script src="~/desktopmodules/mvc/Chart/scripts/bootbox.min.js"></script>
 <script src="~/desktopmodules/mvc/Chart/scripts/bootbox.locales.min.js"></script>
 <script src="~/desktopmodules/mvc/Chart/scripts/employee.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
