--- a/Views/Item/Index.cshtml
+++ b/Views/Item/Index.cshtml
@@ -1,19 +1,16 @@
 ﻿@inherits DotNetNuke.Web.Mvc.Framework.DnnWebViewPage<IEnumerable<Christoc.Modules.Chart.Models.Item>>
- 
+
 @using System.Text.RegularExpressions
 @using DotNetNuke.Web.Mvc.Helpers
 @using Christoc.Modules.Chart.Models
 
 @*<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>*@
-<script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/modules/exporting.js"></script>
-<script src="https://code.highcharts.com/modules/export-data.js"></script>
-<script src="https://code.highcharts.com/modules/accessibility.js"></script>
+
 @*<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />*@
 
 @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>*@
-<link href="~/desktopmodules/mvc/Chart/scripts/bootstrap-3.3.2.min.css" rel="stylesheet" />
+@*<link href="~/desktopmodules/mvc/Chart/scripts/bootstrap-3.3.2.min.css" rel="stylesheet" />*@
 <link href="~/desktopmodules/mvc/Chart/scripts/bootstrap-multiselect.css" rel="stylesheet" />
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 <script src="~/desktopmodules/mvc/Chart/scripts/bootstrap-multiselect.js"></script>
@@ -52,7 +49,7 @@
                 <option class="custom-checkbox" value="XML">XML</option>
             </select>
         </div>*@
-    
+
 </figure>
 <form class="form-inline" action="/action_page.php">
     <div class="row">
@@ -83,22 +80,21 @@
             </div>
             <div class="row">
                 <div class="col-md-3"> <label for="cars">Tên biểu đồ:</label></div>
-                <div class="col-md-9"><input type="text" class="form-control mb-2 mr-sm-2" id=""></div>
+                <div class="col-md-9"><input type="text" class="form-control mb-2 mr-sm-2" id="chartName"></div>
             </div>
             <div class="row">
                 <div class="col-md-3"> <label for="cars">Mô tả biểu đồ:</label></div>
-                <div class="col-md-9"><input type="text" class="form-control mb-2 mr-sm-2" id=""></div>
+                <div class="col-md-9"><input type="text" class="form-control mb-2 mr-sm-2" id="chartDetails"></div>
             </div>
             <div class="row">
                 <div class="col-md-3"> <label for="cars">Tên AxisX:</label></div>
-                <div class="col-md-9"><input type="text" class="form-control mb-2 mr-sm-2" id=""></div>
+                <div class="col-md-9"><input type="text" class="form-control mb-2 mr-sm-2" id="chartX"></div>
             </div>
             <div class="row">
                 <div class="col-md-3"><label for="cars">Tên AxisY:</label></div>
-                <div class="col-md-9"><input type="text" class="form-control mb-2 mr-sm-2" id=""></div>
+                <div class="col-md-9"><input type="text" class="form-control mb-2 mr-sm-2" id="chartY"></div>
             </div>
-            
-            <button type="submit" class="btn btn-primary mb-2">Submit</button>
+            <a href="" class="btn btn-primary mb-2">Submit</a>
         </div>
         <div class="col-md-6">
             <div id="container"></div>
@@ -106,134 +102,134 @@
     </div>
 </form>
 @*<div>
-    <div class="row">
-        <div class="col-md-6">
-            <div class="row">
-                <div class="col-md-3">
-                    <label for="cars">Loại biểu đồ:</label>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-3">
+                        <label for="cars">Loại biểu đồ:</label>
+                    </div>
+                    <div class="col-md-9">
+                        <label class="radio-inline">
+                            <input type="radio" name="typechart" checked value="column">Cột
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="typechart" value="line" />Đường
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="typechart" value="bar" />Bar
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="typechart" value="area" />Vùng
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="typechart" value="spline" />Point
+                        </label>
+                    </div>
                 </div>
-                <div class="col-md-9">
-                    <label class="radio-inline">
-                        <input type="radio" name="typechart" checked value="column">Cột
-                    </label>
-                    <label class="radio-inline">
-                        <input type="radio" name="typechart" value="line" />Đường
-                    </label>
-                    <label class="radio-inline">
-                        <input type="radio" name="typechart" value="bar" />Bar
-                    </label>
-                    <label class="radio-inline">
-                        <input type="radio" name="typechart" value="area" />Vùng
-                    </label>
-                    <label class="radio-inline">
-                        <input type="radio" name="typechart" value="spline" />Point
-                    </label>
+                <div class="row">
+                    <div class="col-md-3">
+                        <label for="cars">Tên biểu đồ:</label>
+                    </div>
+                    <div class="col-md-9">
+                        <input type="text" class="chk-field name-chart form-control" name="checkboxfield">
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <label for="cars">Tên biểu đồ:</label>
+                <div class="row">
+                    <div class="col-md-3">
+                        <label for="cars">Mô tả biểu đồ:</label>
+                    </div>
+                    <div class="col-md-9">
+                        <input type="text" class="chk-field sub-title form-control" name="checkboxfield">
+                    </div>
                 </div>
-                <div class="col-md-9">
-                    <input type="text" class="chk-field name-chart form-control" name="checkboxfield">
+                <div class="row">
+                    <div class="col-md-3">
+                        <label for="cars">Tên AxisX:</label>
+                    </div>
+                    <div class="col-md-9">
+                        <input type="text" class="chk-field name-x form-control" name="checkboxfield">
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <label for="cars">Mô tả biểu đồ:</label>
+                <div class="row">
+                    <div class="col-md-3">
+                        <label for="cars">Tên AxisY:</label>
+                    </div>
+                    <div class="col-md-9">
+                        <input type="text" class="chk-field name-y form-control" name="checkboxfield">
+                    </div>
                 </div>
-                <div class="col-md-9">
-                    <input type="text" class="chk-field sub-title form-control" name="checkboxfield">
+                <div class="row">
+                    <div class="col-md-3">
+                        <label for="AXisX">Chọn AxisX:</label>
+                    </div>
+                    <div class="col-md-9">
+                        <select id="AXisX" class="form-control">
+                        </select>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <label for="cars">Tên AxisX:</label>
-                </div>
-                <div class="col-md-9">
-                    <input type="text" class="chk-field name-x form-control" name="checkboxfield">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <label for="cars">Tên AxisY:</label>
-                </div>
-                <div class="col-md-9">
-                    <input type="text" class="chk-field name-y form-control" name="checkboxfield">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <label for="AXisX">Chọn AxisX:</label>
-                </div>
-                <div class="col-md-9">
-                    <select id="AXisX" class="form-control">
-                    </select>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <label for="AXisY">Chọn AxisY:</label>
-                </div>
-                <div class="col-md-9">
-                    <select id="AXisY" multiple class="multiple form-control">
+                <div class="row">
+                    <div class="col-md-3">
+                        <label for="AXisY">Chọn AxisY:</label>
+                    </div>
+                    <div class="col-md-9">
+                        <select id="AXisY" multiple class="multiple form-control">
 
-                    </select>
+                        </select>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <label for="ArticleInTopic">Bài viết cùng chủ đề:</label>
+                    </div>
+                    <div class="col-md-9">
+                        <select id="ArticleInTopic" multiple class="multiple form-control"></select>
+                    </div>
+                </div>
+                <div>
+                    <button type="button" class="btn-getdata btn">Hiển thị biểu đồ</button>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <label for="ArticleInTopic">Bài viết cùng chủ đề:</label>
-                </div>
-                <div class="col-md-9">
-                    <select id="ArticleInTopic" multiple class="multiple form-control"></select>
-                </div>
-            </div>
-            <div>
-                <button type="button" class="btn-getdata btn">Hiển thị biểu đồ</button>
+            <div class="col-md-6">
+
+
+                <div id="container"></div>
             </div>
         </div>
-        <div class="col-md-6">
-
-
-            <div id="container"></div>
-        </div>
-    </div>
-</div>*@
+    </div>*@
 
 <script type="text/javascript">
 
-    $(document).ready(function () {
-        $('#select').multiselect({
-            includeSelectAllOption: true,
-            nonSelectedText: '--Chọn--',
-            buttonWidth: 350,
-            enableFiltering: true
-        });
-        //$(".js-example-basic-multiple").select2({
-        //    maximumSelectionLength: 2
-        //});
+    //$(document).ready(function () {
+    //    $('#select').multiselect({
+    //        includeSelectAllOption: true,
+    //        nonSelectedText: '--Chọn--',
+    //        buttonWidth: 350,
+    //        enableFiltering: true
+    //    });
+    //    //$(".js-example-basic-multiple").select2({
+    //    //    maximumSelectionLength: 2
+    //    //});
 
-        //var last_valid_selection = null;
-        //$('#select').change(function (event) {
-        //    if ($(this).val().length > 2) {
-        //        alert('You can only choose 2!');
-        //        $(this).val(last_valid_selection);
-        //    } else {
-        //        last_valid_selection = $(this).val();
-        //    }
-        //});
-    });
-    //var verified = [];
-    //document.querySelector('select').onchange = function (e) {
-    //    if (this.querySelectorAll('option:checked').length <= 5) {
-    //        verified = Array.apply(null, this.querySelectorAll('option:checked'));
-    //    } else {
-    //        Array.apply(null, this.querySelectorAll('option')).forEach(function (e) {
-    //            e.selected = verified.indexOf(e) > -1;
-    //        });
-    //    }
-    //}
+    //    //var last_valid_selection = null;
+    //    //$('#select').change(function (event) {
+    //    //    if ($(this).val().length > 2) {
+    //    //        alert('You can only choose 2!');
+    //    //        $(this).val(last_valid_selection);
+    //    //    } else {
+    //    //        last_valid_selection = $(this).val();
+    //    //    }
+    //    //});
+    //});
+    ////var verified = [];
+    ////document.querySelector('select').onchange = function (e) {
+    ////    if (this.querySelectorAll('option:checked').length <= 5) {
+    ////        verified = Array.apply(null, this.querySelectorAll('option:checked'));
+    ////    } else {
+    ////        Array.apply(null, this.querySelectorAll('option')).forEach(function (e) {
+    ////            e.selected = verified.indexOf(e) > -1;
+    ////        });
+    ////    }
+    ////}
 
 
 
@@ -277,6 +273,7 @@
         var chartData;
         var Genders = [];
         var Amounts = [];
+        var Cities = [];
         $.ajax({
             url: siteRoot + 'DesktopModules/MVC/Chart/Item/GetResults',
             method: "Get",
@@ -287,24 +284,34 @@
                 "RequestVerificationToken": rvtoken
             },
             success: function (data) {
-                chartData = data.data;
+                chartData = data.gender;
                 var obj = JSON.parse(chartData);
-                for (var i = 0; i < obj.length; i++) {
-                    Genders.push(obj[i].Gender);
-                    //alert(obj[i].Gender);
-                    Amounts.push(obj[i].Amount);
-                    //alert(obj[i].Amount);
-                    chart.addSeries({
-                        name: obj[i].Gender,
-                        data: JSON.parse("[" + obj[i].Amount + ",2,3]")
-                    });
-
-
+                console.log(obj);
+                var amountArr1 = []; amountArr2 = []; amountArr3 = []; cities = [];
+                for (var i = 0; i < obj.Cities1.length; i++) {
+                    amountArr1.push(obj.Cities1[i].Amount);
                 }
-               chart.xAxis[0].setCategories(Genders)
-                console.log(Genders);
-                console.log(Amounts);
-
+                for (var i = 0; i < obj.Cities2.length; i++) {
+                    amountArr2.push(obj.Cities2[i].Amount);
+                    cities.push(obj.Cities2[i].CityName)
+                }
+                for (var i = 0; i < obj.Cities3.length; i++) {
+                    amountArr3.push(obj.Cities3[i].Amount);
+                }
+                console.log(amountArr1);
+                chart.addSeries({
+                    name: "Male",
+                    data: amountArr1
+                });
+                chart.addSeries({
+                    name: "Female",
+                    data: amountArr2
+                });
+                chart.addSeries({
+                    name: "Other",
+                    data: amountArr3
+                });
+                chart.xAxis[0].setCategories(cities)
             },
             error: function (xhr, ajaxOptions, thrownError) {
                 alert(xhr.status);
@@ -341,11 +348,15 @@
         });
     }*@
 </script>
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/modules/accessibility.js"></script>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 <!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>*@
 
 <!-- Popper JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
